# test-py-package

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
hello_greeter/: __init__.py  cli.py  config.py  greeter.py
